--- a/about.html
+++ b/about.html
@@ -38,12 +38,22 @@
 
             <section class="about">
                 <p style="font-family: 'DM Mono', monospace; font-weight: 400; word-wrap: break-word;">
-                    Wilfredo hails from the vibrant island of Puerto Rico. He traveled to Rhode Island for university and discovered the joys of filmmaking. Fredo has worked as gaffer, producer, editor, cinematographer, and director on various <a href="https://youtu.be/VAabx5ttHa4" target=”_blank” rel="noopener noreferrer">projects</a> including a <a href="https://youtu.be/wNJihWmU-iE" target=”_blank” rel="noopener noreferrer">music video for the Boston band Pyramid Thieves</a>. He also dabbles in front-end web building (he coded this website!).
+                    Wilfredo hails from the vibrant island of Puerto Rico. He traveled to Rhode Island for university and discovered the joys of filmmaking. Fredo has worked as gaffer, producer, editor, cinematographer, and director on various <a href="https://youtu.be/VAabx5ttHa4" target=”_blank” rel="noopener noreferrer">projects</a> including a <a href="https://youtu.be/wNJihWmU-iE" target=”_blank” rel="noopener noreferrer">music video for the Boston band Pyramid Thieves</a>. He also dabbles in front-end web building (he coded this website! as well as others).
+
+                    <br>
+                    <br>
+
+                    Fredo enjoys music discovery and makes mixes-
+                    <br>
+                    <br>
+                    <iframe width="100%" height="60" src="https://player-widget.mixcloud.com/widget/iframe/?hide_cover=1&mini=1&feed=%2Ffr_radio%2Fwarning-from-space-%E5%AE%87%E5%AE%99%E4%BA%BA%E6%9D%B1%E4%BA%AC%E3%81%AB%E7%8F%BE%E3%82%8F%E3%82%8B%2F" frameborder="0" ></iframe>
+                    <iframe width="100%" height="60" src="https://player-widget.mixcloud.com/widget/iframe/?hide_cover=1&mini=1&feed=%2Ffr_radio%2Fcat-women-of-the-moon%2F" frameborder="0" ></iframe>
 
                     <br>
                     <br>
 
                     Currently based out of New York City, his current focus is in digital/analog video manipulation, generative art, and web development. He welcomes any artistic collaboration.</p>
+
             </section>
             
 
