--- a/about.html
+++ b/about.html
@@ -43,7 +43,7 @@
                     <br>
                     <br>
 
-                    Fredo enjoys music discovery and makes mixes-
+                    Fredo enjoys music discovery and makes mixes under the moniker <em>fredonaut</em> -
                     <br>
                     <br>
                     <iframe width="100%" height="60" src="https://player-widget.mixcloud.com/widget/iframe/?hide_cover=1&mini=1&feed=%2Ffr_radio%2Fwarning-from-space-%E5%AE%87%E5%AE%99%E4%BA%BA%E6%9D%B1%E4%BA%AC%E3%81%AB%E7%8F%BE%E3%82%8F%E3%82%8B%2F" frameborder="0" ></iframe>
