--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
             </section>
 
             <footer>
-                <p style="font-family: 'DM Mono', monospace; font-size: 10px; color: black; background-color: white; padding: 10px; width: 200px;">© 1991 Puerto Rico</p>
+                <p style="font-family: 'DM Mono', monospace; font-size: 10px; color: black; background-color: white; padding: 10px; width: 200px;">© MCMXCI Puerto Rico</p>
             </footer>
         </section>
     </section>
