--- a/index.html
+++ b/index.html
@@ -37,6 +37,22 @@
         <section class="projs-flow">
             <section class="projects-left">
                 <section>
+                    <img class="proj-img" src="assets/videos/lostatsea_1.mp4" alt="" loading="lazy" />
+                </section>
+    
+                <section class="title-container" style="font-family: 'DM Mono', monospace;">
+                    <section class="title-runtime">
+                        <h4 class="proj-title ">
+                            Lost at sea
+                        </h4>
+                        <p class="sub-desc ">Part of HYPERLIFE exhibit at the Brick Aux gallery 8/17/23</p>
+                    </section>
+
+                </section>
+            </section>
+
+            <section class="projects-right">
+                <section>
                     <img class="proj-img" src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExMGdtbmhwYjRmZ2VqdjM0enI2YzhycWVtbG11MHNrdDRlMW9hZ210MSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/Vhs7upfDz32nWEUZZI/giphy-downsized-large.gif" alt="" loading="lazy" />
                 </section>
     
@@ -55,7 +71,7 @@
                 </section>
             </section>
 
-            <section class="projects-right">
+            <section class="projects-left">
                 <section>
                     <img class="proj-img" src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExaHY3OXJ5aGduMmd3NzQ4cHd5bjN2d3F2Y2MzOHVrNWE1MjVkdmJjbCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/pdzhrRG2ebslTBEb3T/giphy-downsized-large.gif" alt="" loading="lazy" />
                 </section>
@@ -75,7 +91,7 @@
                 </section>
             </section>
 
-            <section class="projects-left">
+            <section class="projects-right">
                 <section>
                     <img class="proj-img" src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExc3ozMW1tcGxwYXgwODFxNGY5eWQ3ajVxc2xibjBlY2ttdm5ucWJvbSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/6j2CCsNP1faN32o0hc/giphy-downsized-large.gif" alt="" loading="lazy" />
                 </section>
@@ -90,7 +106,7 @@
                 </section>
             </section>
 
-            <section class="projects-right">
+            <section class="projects-left">
                 <section>
                     <img class="proj-img" src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExODhoa2NrajZoMHNrMDc3MnJyeGY0aWdna3h6b2kzcWlieTIzYWQ2byZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/N5giexArUWelSNiSvT/giphy-downsized-large.gif" alt="" loading="lazy" />
                 </section>
@@ -105,7 +121,7 @@
                 </section>
             </section>
 
-            <section class="projects-left">
+            <section class="projects-right">
                 <section>
                     <img class="proj-img" src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExZGFoOGp4OHRmaDdobXN0aGY0b3o2cXJ1djNnZnRoNGIzdHF6N2Y0ayZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/9CERvU2qaFr55t7E79/source.gif" alt="" loading="lazy" />
                 </section>
@@ -123,7 +139,7 @@
                 </section>
             </section>
 
-            <section class="projects-right">
+            <section class="projects-left">
                 <section>
                     <img class="proj-img" src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExYzJ6cWJ5cTlma3F3ZWw4eWphZ2k0dmhzOXVzNXlxa29mNThydHhwYyZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/bcdoeVKUkpxfBjlxai/source.gif" alt="" loading="lazy" />
                 </section>
@@ -142,7 +158,7 @@
                 </section>
             </section>
 
-            <section class="projects-left">
+            <section class="projects-right">
                 <section>
                     <img class="proj-img" src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExbmp0bmZ2c3E4cWwzb3hwM2FpN2NoMWx5cThzeXBkY2g4enc0bG5mMCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/CXhLKMZB6BOWZ4X6Os/giphy.gif" alt="" loading="lazy" />
                 </section>
@@ -160,7 +176,7 @@
                 </section>
             </section>
 
-            <section class="projects-right">
+            <section class="projects-left">
                 <section>
                     <img class="proj-img" src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExaWNvcG9jMG1mZ3QydDh5bmlnZmM4eDlmb2Z1bTZlb2IzZWYzMDVoYSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/mSitnIleX5r01MsQgN/giphy.gif" alt="" loading="lazy" />
                 </section>
