--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </section> -->
 
         <section class="projs-flow">
-            <section class="projects-left">
+            <section class="projects-left" style="top: -35px;">
                 <section>
                     <img class="proj-img" src="assets/videos/lostatsea_1.mp4" alt="" loading="lazy" />
                 </section>
