--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 </section>
             </section>
 
-            <section class="projects-right">
+            <section class="projects-right" style="top: -33px;">
                 <section>
                     <img class="proj-img" src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExc3ozMW1tcGxwYXgwODFxNGY5eWQ3ajVxc2xibjBlY2ttdm5ucWJvbSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/6j2CCsNP1faN32o0hc/giphy-downsized-large.gif" alt="" loading="lazy" />
                 </section>
