--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </section> -->
 
         <section class="projs-flow">
-            <section class="projects-left" style="top: -35px;">
+            <section class="projects-left">
                 <section>
                     <img class="proj-img" src="assets/videos/lostatsea_1.mp4" alt="" loading="lazy" />
                 </section>
@@ -86,7 +86,7 @@
                 </section>
             </section>
 
-            <section class="projects-right" style="top: -33px;">
+            <section class="projects-right">
                 <section>
                     <img class="proj-img" src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExc3ozMW1tcGxwYXgwODFxNGY5eWQ3ajVxc2xibjBlY2ttdm5ucWJvbSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/6j2CCsNP1faN32o0hc/giphy-downsized-large.gif" alt="" loading="lazy" />
                 </section>
@@ -116,11 +116,11 @@
                 </section>
             </section>
 
-            <section class="item" style="margin: 0 auto; top: 170px;">
-            <h1 class="title" style="font-size: 30px; line-height: 36.396875px;">
-                experiments
-            </h1>
-        </section>
+            <!-- <section class="item" style="margin: 0 auto; top: 170px;">
+                <h1 class="title" style="font-size: 30px; line-height: 36.396875px;">
+                    experiments
+                </h1>
+            </section> -->
 
             <section class="projects-right">
                 <section>
@@ -238,15 +238,11 @@
                     contact: <a href="mailto:fredo25w@gmail.com" target="_blank" class="link">email</a>, <a href="https://www.instagram.com/bebofrik/" target="_blank" class="link">instagram</a>, <a href="https://www.youtube.com/channel/UC5oNJt-0mgmcMfv42GhqxZA" target="_blank" class="link">youtube</a>, <a href="https://letterboxd.com/spookyfr/" target="_blank" class="link">letterboxd</a>
                 </h2>
             </section>
-
-            
-
-            <br>
-
-            <footer>
-                <p style="font-family: 'DM Mono', monospace; font-size: 10px; color: black; background-color: white; padding: 10px; width: 250px;">© MCMXCI Puerto Rico</p>
-            </footer>
         </section>
+
+        <footer>
+            <p style="font-family: 'DM Mono', monospace; font-size: 10px; color: black; background-color: white; padding: 10px; width: 250px; display: flex; justify-content: center; align-items: center;">© MCMXCI Puerto Rico</p>
+        </footer>
     </section>
 </body>
 </html>
