--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                         <h4 class="proj-title ">
                             Lost at sea
                         </h4>
-                        <p class="sub-desc ">Part of HYPERLIFE exhibit at the Brick Aux gallery 8/17/23</p>
+                        <p class="proj-desc ">Part of HYPERLIFE exhibit at the Brick Aux gallery 8/17/23</p>
                     </section>
 
                 </section>
@@ -79,7 +79,7 @@
                         <p class="sub-desc ">5 min. / 2O23</p>
                     </section>
 
-                    <p class=" proj-desc">
+                    <p class="proj-desc">
                         An astronaut tries to save his crewmembers from a failing ship in
                         this remix of Antonio Margheriti's <em>Space-Men</em> from 1960.
                     </p>
