--- a/index.html
+++ b/index.html
@@ -58,8 +58,12 @@
                         <h4 class="proj-title ">
                             Lost at sea
                         </h4>
-                        <p class="proj-desc ">Part of HYPERLIFE exhibit at the Brick Aux gallery 8/17/23</p>
+                        <p class="sub-desc ">2O23 / TouchDesigner</p>
                     </section>
+
+                    <p class="proj-desc ">Looped waves crash into each other, submerging it's viewer and pulling them
+                        deeper into its depths. Part of the HYPERLIFE gallery exhibit at the Brick Aux, Brooklyn NY.
+                        8.17.23</p>
 
                 </section>
             </section>
