--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <section class="projects-right">
                 <section>
                     <img class="proj-img"
-                        src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExMGdtbmhwYjRmZ2VqdjM0enI2YzhycWVtbG11MHNrdDRlMW9hZ210MSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/Vhs7upfDz32nWEUZZI/giphy-downsized-large.gif"
+                        src="https://media.giphy.com/media/IzaxCFwp4rMmnS8egM/giphy.gif"
                         alt="" loading="lazy" />
                 </section>
 
@@ -93,7 +93,7 @@
             <section class="projects-left">
                 <section>
                     <img class="proj-img"
-                        src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExaHY3OXJ5aGduMmd3NzQ4cHd5bjN2d3F2Y2MzOHVrNWE1MjVkdmJjbCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/pdzhrRG2ebslTBEb3T/giphy-downsized-large.gif"
+                        src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExNmNpeWxreTA0YzZ5cjQ3Nm5jajBtMTA4Nm9nYWUxbWc1cnNpY2V5bCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/W2Q6lbYWpVMCIchnSm/giphy-downsized-large.gif"
                         alt="" loading="lazy" />
                 </section>
 
@@ -115,7 +115,7 @@
             <section class="projects-right">
                 <section>
                     <img class="proj-img"
-                        src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExc3ozMW1tcGxwYXgwODFxNGY5eWQ3ajVxc2xibjBlY2ttdm5ucWJvbSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/6j2CCsNP1faN32o0hc/giphy-downsized-large.gif"
+                        src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExN3JiODZrdjJyMDNuZnhtbGdlOGVpYzBneGhuYTcyMnNldjUxc2ljbiZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/wzDE7e0XfWmEKcFkhY/source.gif"
                         alt="" loading="lazy" />
                 </section>
 
@@ -132,7 +132,7 @@
             <section class="projects-left">
                 <section>
                     <img class="proj-img"
-                        src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExODhoa2NrajZoMHNrMDc3MnJyeGY0aWdna3h6b2kzcWlieTIzYWQ2byZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/N5giexArUWelSNiSvT/giphy-downsized-large.gif"
+                        src="https://media.giphy.com/media/CXDwmsxllA9m0ncd8O/giphy.gif"
                         alt="" loading="lazy" />
                 </section>
 
