--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <a href="index.html" target="_self" class="bold link">fr-world</a>: visual projects by <a
                     href="about.html" target="_self" class="link">fredo</a> <img
                     src="assets/images/noun-star-6241223.svg" alt="eight bit style stars"
-                    style="margin: 0; margin-left: 6px; padding: 0; width: 30px; position: absolute;">
+                    style="margin: 0; margin-left: -2px; margin-top: 2px; padding: 0; width: 19px; position: absolute;">
             </h1>
         </section>
         <!-- <section class="item" style="margin: 0 auto; top: 170px;">
@@ -70,9 +70,8 @@
 
             <section class="projects-right">
                 <section>
-                    <img class="proj-img"
-                        src="https://media.giphy.com/media/IzaxCFwp4rMmnS8egM/giphy.gif"
-                        alt="" loading="lazy" />
+                    <img class="proj-img" src="https://media.giphy.com/media/IzaxCFwp4rMmnS8egM/giphy.gif" alt=""
+                        loading="lazy" />
                 </section>
 
                 <section class="title-container" style="font-family: 'DM Mono', monospace;">
@@ -131,9 +130,8 @@
 
             <section class="projects-left">
                 <section>
-                    <img class="proj-img"
-                        src="https://media.giphy.com/media/CXDwmsxllA9m0ncd8O/giphy.gif"
-                        alt="" loading="lazy" />
+                    <img class="proj-img" src="https://media.giphy.com/media/CXDwmsxllA9m0ncd8O/giphy.gif" alt=""
+                        loading="lazy" />
                 </section>
 
                 <section class="title-container" style="font-family: 'DM Mono', monospace;">
@@ -237,7 +235,7 @@
             <section class="projects-right">
                 <section>
                     <img class="proj-img"
-                        src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExemV1bHNjOXNmamdyOXdoazFzc3czYWltZjV2ZnlnenZjYTR0bWxzMiZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/52TQghd9xHL1zGd4uC/giphy-downsized-large.gif"
+                        src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExdHE5eGt0d2lsaGVpeXdmbXM3bXVlcmFibzhxeG5wdG1wdmszamI1ayZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/evT7QuK6QLxMq6lgif/giphy-downsized-large.gif"
                         alt="" loading="lazy" />
                 </section>
 
