--- a/index.html
+++ b/index.html
@@ -58,11 +58,11 @@
                         <h4 class="proj-title ">
                             Lost at sea
                         </h4>
-                        <p class="sub-desc ">2O23 / TouchDesigner</p>
+                        <p class="sub-desc ">2O23</p>
                     </section>
 
-                    <p class="proj-desc ">Looped waves crash into each other, submerging it's viewer and pulling them
-                        deeper into its depths. Part of the HYPERLIFE gallery exhibit at the Brick Aux, Brooklyn NY.
+                    <p class="proj-desc ">Sink into the depths of the sea. Part of the HYPERLIFE gallery exhibit at the
+                        Brick Aux, Brooklyn NY.
                         8.17.23</p>
 
                 </section>
