--- a/about.html
+++ b/about.html
@@ -18,13 +18,15 @@
 </head>
 
 <body>
+    <section class="background-portrait">
+        <img src="/assets/images/me-1.jpg" alt="">
+    </section>
+
     <section id="basegrid">
-        <section class="background-img-me">
-        </section>
 
         <section class="titlebanner" style="margin: 0 auto;">
             <h1 class="title" style="font-size: 30px; line-height: 33px;">
-                <a href="index.html" target="_self" class="bold link">fr-world</a>: about wilfredo herrera
+                <a href="index.html" target="_self" class="bold link">fr-wrld</a>: about wilfredo herrera
             </h1>
         </section>
 
@@ -49,7 +51,7 @@
                     <br>
 
                     Fredo enjoys music discovery and makes mixes under the moniker <a
-                        href="https://www.mixcloud.com/fr_radio/" target="_blank"><em>fredonaut</em></a> -
+                        href="https://www.mixcloud.com/fr_radio/" target="_blank"><em>fredonaut</em></a>
                     <br>
                     <br>
 
