--- a/index.html
+++ b/index.html
@@ -18,13 +18,15 @@
 </head>
 
 <body>
-    <section id="basegrid">
-        <section class="background-img">
-        </section>
+    <section class="bg-img">
+        <img src="assets/images/scanned-img/tree-1.jpg" alt="">
+    </section>
 
-        <section class="titlebanner" style="margin: 0 auto;">
+    <section id="base-grid">
+
+        <section class="titlebanner">
             <h1 class="title" style="font-size: 30px; line-height: 33px;">
-                <a href="index.html" target="_self" class="bold link">fr-world</a>: visual projects by <a
+                <a href="index.html" target="_self" class="bold link">fr-wrld</a>: visual projects by <a
                     href="about.html" target="_self" class="link">fredo</a> <img
                     src="assets/images/noun-star-6241223.svg" alt="eight bit style stars"
                     style="margin: 0; margin-left: -2px; margin-top: 2px; padding: 0; width: 19px; position: absolute;">
@@ -45,6 +47,8 @@
                     class="link">letterboxd</a>
             </h2>
         </section>
+
+
 
         <section class="projs-flow">
 
@@ -272,12 +276,14 @@
                     </p>
                 </section>
             </section>
+
         </section>
 
         <footer>
             <p
                 style="font-family: 'DM Mono', monospace; font-size: 10px; color: black; background-color: white; padding: 10px; width: 250px; display: flex; justify-content: center; align-items: center;">
-                © MCMXCI Puerto Rico</p>
+                © MCMXCI Puerto Rico
+            </p>
         </footer>
     </section>
 </body>
