--- a/about.html
+++ b/about.html
@@ -80,7 +80,16 @@
 
 
         </section>
+
+        <footer>
+            <p
+                style="font-family: 'DM Mono', monospace; font-size: 10px; color: black; background-color: white; padding: 10px; width: 200px; display: flex; justify-content: center; align-items: center;">
+                © MCMXCI PRTORC
+            </p>
+        </footer>
     </section>
+
+    <div style="height: 200px;"></div>
 </body>
 
 </html>
