--- a/index.html
+++ b/index.html
@@ -279,12 +279,8 @@
 
         </section>
 
-        <footer>
-            <p
-                style="font-family: 'DM Mono', monospace; font-size: 10px; color: black; background-color: white; padding: 10px; width: 250px; display: flex; justify-content: center; align-items: center;">
-                © MCMXCI Puerto Rico
-            </p>
-        </footer>
+        <div style="height: 200px;"></div>
+
     </section>
 </body>
 
