--- a/index.html
+++ b/index.html
@@ -57,36 +57,29 @@
                     <img src="assets/videos/lostatsea_1.mp4" alt="" loading="lazy" />
                 </section>
 
-                <section class="prj-title" style="font-family: 'DM Mono', monospace;">
-                    <section class="title-runtime">
-                        <h4 class="proj-title ">
-                            Lost at sea
-                        </h4>
-                        <p class="sub-desc ">2O23</p>
-                    </section>
+                <section class="prj-info">
+                    <h4 class="prj-title">Lost at sea</h4>
+                    <p class="date-length">2O23</p>
 
-                    <p class="proj-desc ">Sink into the depths of the sea. Part of the HYPERLIFE gallery exhibit at the
-                        Brick Aux, Brooklyn NY.
-                        8.17.23</p>
-
+                    <p class="prj-desc">
+                        Sink into the depths of the sea. Part of the HYPERLIFE gallery exhibit at the Brick Aux,
+                        Brooklyn NY. 8.17.23
+                    </p>
                 </section>
             </section>
 
             <section class="prj-item">
                 <section class="prj-img">
-                    <img src="https://media.giphy.com/media/IzaxCFwp4rMmnS8egM/giphy.gif" alt=""
-                        loading="lazy" />
+                    <img src="https://media.giphy.com/media/IzaxCFwp4rMmnS8egM/giphy.gif" alt="" loading="lazy" />
                 </section>
 
-                <section class="title-container" style="font-family: 'DM Mono', monospace;">
-                    <section class="title-runtime">
-                        <h4 class="proj-title ">
-                            <a href="https://youtu.be/Xj0EtyL7fVw" target="_blank" class="link">Space-Men</a>
-                        </h4>
-                        <p class="sub-desc ">5 min. / 2O23</p>
-                    </section>
+                <section class="prj-info">
+                    <h4 class="prj-title">
+                        <a href="https://youtu.be/Xj0EtyL7fVw" target="_blank" class="link">Space-Men</a>
+                    </h4>
+                    <p class="date-length">5 min. | 2O23</p>
 
-                    <p class="proj-desc">
+                    <p class="prj-desc">
                         An astronaut tries to save his crewmembers from a failing ship in
                         this remix of Antonio Margheriti's <em>Space-Men</em> from 1960.
                     </p>
@@ -95,20 +88,17 @@
 
             <section class="prj-item">
                 <section class="prj-img">
-                    <img
-                        src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExNmNpeWxreTA0YzZ5cjQ3Nm5jajBtMTA4Nm9nYWUxbWc1cnNpY2V5bCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/W2Q6lbYWpVMCIchnSm/giphy-downsized-large.gif"
+                    <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExNmNpeWxreTA0YzZ5cjQ3Nm5jajBtMTA4Nm9nYWUxbWc1cnNpY2V5bCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/W2Q6lbYWpVMCIchnSm/giphy-downsized-large.gif"
                         alt="" loading="lazy" />
                 </section>
 
-                <section class="title-container" style="font-family: 'DM Mono', monospace;">
-                    <section class="title-runtime">
-                        <h4 class="proj-title ">
-                            <a href="https://youtu.be/ErilhrNfDMo" target="_blank" class="link">El Santo</a>
-                        </h4>
-                        <p class="sub-desc ">5 min. / 2O23</p>
-                    </section>
+                <section class="prj-info">
+                    <h4 class="prj-title">
+                        <a href="https://youtu.be/ErilhrNfDMo" target="_blank" class="link">El Santo</a>
+                    </h4>
+                    <p class="date-length">5 min. | 2O23</p>
 
-                    <p class=" proj-desc">
+                    <p class="prj-desc">
                         Luchador superstar El Santo battles his foes thru a technicolor lo-fi
                         kaleidoscope of color and violence.
                     </p>
@@ -117,34 +107,28 @@
 
             <section class="prj-item">
                 <section class="prj-img">
-                    <img
-                        src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExN3JiODZrdjJyMDNuZnhtbGdlOGVpYzBneGhuYTcyMnNldjUxc2ljbiZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/wzDE7e0XfWmEKcFkhY/source.gif"
+                    <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExN3JiODZrdjJyMDNuZnhtbGdlOGVpYzBneGhuYTcyMnNldjUxc2ljbiZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/wzDE7e0XfWmEKcFkhY/source.gif"
                         alt="" loading="lazy" />
                 </section>
 
-                <section class="title-container" style="font-family: 'DM Mono', monospace;">
-                    <section class="title-runtime">
-                        <h4 class="proj-title ">
-                            <a href="https://youtu.be/2FxIPGvL-Io" target="_blank" class="link">Wavy Silent Hour</a>
-                        </h4>
-                        <p class="sub-desc ">1 hr. / 2O23</p>
-                    </section>
+                <section class="prj-info">
+                    <h4 class="prj-title">
+                        <a href="https://youtu.be/2FxIPGvL-Io" target="_blank" class="link">Wavy Silent Hour</a>
+                    </h4>
+                    <p class="date-length">1 hr. | 2O23</p>
                 </section>
             </section>
 
             <section class="prj-item">
                 <section class="prj-img">
-                    <img src="https://media.giphy.com/media/CXDwmsxllA9m0ncd8O/giphy.gif" alt=""
-                        loading="lazy" />
+                    <img src="https://media.giphy.com/media/CXDwmsxllA9m0ncd8O/giphy.gif" alt="" loading="lazy" />
                 </section>
 
-                <section class="title-container" style="font-family: 'DM Mono', monospace;">
-                    <section class="title-runtime">
-                        <h4 class="proj-title ">
-                            <a href="https://youtu.be/2FxIPGvL-Io" target="_blank" class="link">Frosty Silent Hour</a>
-                        </h4>
-                        <p class="sub-desc ">1 hr. / 2O23</p>
-                    </section>
+                <section class="prj-info">
+                    <h4 class="prj-title">
+                        <a href="https://youtu.be/2FxIPGvL-Io" target="_blank" class="link">Frosty Silent Hour</a>
+                    </h4>
+                    <p class="date-length">1 hr. / 2O23</p>
                 </section>
             </section>
 
@@ -156,21 +140,13 @@
 
             <section class="prj-item">
                 <section class="prj-img">
-                    <img
-                        src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExZGFoOGp4OHRmaDdobXN0aGY0b3o2cXJ1djNnZnRoNGIzdHF6N2Y0ayZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/9CERvU2qaFr55t7E79/source.gif"
+                    <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExZGFoOGp4OHRmaDdobXN0aGY0b3o2cXJ1djNnZnRoNGIzdHF6N2Y0ayZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/9CERvU2qaFr55t7E79/source.gif"
                         alt="" loading="lazy" />
                 </section>
 
-                <section class="title-container" style="font-family: 'DM Mono', monospace;">
-                    <section class="title-runtime">
-                        <h4 class="proj-title ">
-                            Bloom
-                        </h4>
-                        <p class="sub-desc "></p>
-                    </section>
-
-                    <p class=" proj-desc">
-                    </p>
+                <section class="prj-info">
+                    <h4 class="prj-title">Bloom</h4>
+                    <p class="date-length"></p>
                 </section>
             </section>
 
@@ -180,99 +156,58 @@
                         alt="" loading="lazy" />
                 </section>
 
-                <section class="title-container" style="font-family: 'DM Mono', monospace;">
-                    <section class="title-runtime">
-                        <h4 class="proj-title ">
-                            blck river
-                        </h4>
-                        <p class="sub-desc "></p>
-                    </section>
-
-                    <p class=" proj-desc">
-
-                    </p>
+                <section class="prj-info">
+                    <h4 class="prj-title">blck river</h4>
+                    <p class="date-length"></p>
                 </section>
             </section>
 
             <section class="prj-item">
                 <section class="prj-img">
-                    <img
-                        src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExbmp0bmZ2c3E4cWwzb3hwM2FpN2NoMWx5cThzeXBkY2g4enc0bG5mMCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/CXhLKMZB6BOWZ4X6Os/giphy.gif"
+                    <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExbmp0bmZ2c3E4cWwzb3hwM2FpN2NoMWx5cThzeXBkY2g4enc0bG5mMCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/CXhLKMZB6BOWZ4X6Os/giphy.gif"
                         alt="" loading="lazy" />
                 </section>
 
-                <section class="title-container" style="font-family: 'DM Mono', monospace;">
-                    <section class="title-runtime">
-                        <h4 class="proj-title ">
-                            clementines
-                        </h4>
-                        <p class="sub-desc "></p>
-                    </section>
-
-                    <p class=" proj-desc">
-                    </p>
+                <section class="prj-info">
+                    <h4 class="prj-title">clementines</h4>
+                    <p class="date-length"></p>
                 </section>
             </section>
 
             <section class="prj-item">
                 <section class="prj-img">
-                    <img
-                        src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExaWNvcG9jMG1mZ3QydDh5bmlnZmM4eDlmb2Z1bTZlb2IzZWYzMDVoYSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/mSitnIleX5r01MsQgN/giphy.gif"
+                    <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExaWNvcG9jMG1mZ3QydDh5bmlnZmM4eDlmb2Z1bTZlb2IzZWYzMDVoYSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/mSitnIleX5r01MsQgN/giphy.gif"
                         alt="" loading="lazy" />
                 </section>
 
-                <section class="title-container" style="font-family: 'DM Mono', monospace;">
-                    <section class="title-runtime">
-                        <h4 class="proj-title ">
-                            gaming
-                        </h4>
-                        <p class="sub-desc "></p>
-                    </section>
-
-                    <p class=" proj-desc">
-
-                    </p>
+                <section class="prj-info">
+                    <h4 class="prj-title">gaming</h4>
+                    <p class="date-length"></p>
                 </section>
             </section>
 
             <section class="prj-item">
                 <section class="prj-img">
-                    <img
-                        src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExdHE5eGt0d2lsaGVpeXdmbXM3bXVlcmFibzhxeG5wdG1wdmszamI1ayZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/evT7QuK6QLxMq6lgif/giphy-downsized-large.gif"
+                    <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExdHE5eGt0d2lsaGVpeXdmbXM3bXVlcmFibzhxeG5wdG1wdmszamI1ayZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/evT7QuK6QLxMq6lgif/giphy-downsized-large.gif"
                         alt="" loading="lazy" />
                 </section>
 
-                <section class="title-container" style="font-family: 'DM Mono', monospace;">
-                    <section class="title-runtime">
-                        <h4 class="proj-title ">
-                            colorful spiriling
-                        </h4>
-                        <p class="sub-desc "></p>
-                    </section>
-
-                    <p class=" proj-desc">
-                    </p>
+                <section class="prj-info">
+                    <h4 class="prj-title">colorful spiriling</h4>
+                    <p class="date-length"></p>
                 </section>
             </section>
 
             <section class="prj-item">
                 <section class="prj-img">
-                    <img
+                    <img id="gif"
                         src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExZGoxdHR2aTU5aDNxM3V4Mmp3bzFyd2RhcGNraGs5NHV5c3AxNjNnYSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/POMUkJVdedbJOSjxdq/giphy-downsized-large.gif"
                         alt="" loading="lazy" />
                 </section>
 
-                <section class="title-container" style="font-family: 'DM Mono', monospace;">
-                    <section class="title-runtime">
-                        <h4 class="proj-title ">
-                            glitchy
-                        </h4>
-                        <p class="sub-desc "></p>
-                    </section>
-
-                    <p class=" proj-desc">
-
-                    </p>
+                <section class="prj-info">
+                    <h4 class="prj-title">glitchy</h4>
+                    <p class="date-length"></p>
                 </section>
             </section>
 
@@ -281,6 +216,14 @@
         <div style="height: 200px;"></div>
 
     </section>
+
+    <script>
+        // Get the GIF element
+        var gif = document.getElementById('gif');
+
+        // Stop autoplay
+        gif.removeAttribute('autoplay');
+    </script>
 </body>
 
 </html>
