--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="This page is the portfolio of Wilfredo Herrera">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>fr-world</title>
+    <title>art by fredo</title>
     <link type="image/x-icon" sizes="16x16" rel="icon" href="assets/images/space-favicon.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
