--- a/index.html
+++ b/index.html
@@ -213,9 +213,8 @@
 
             <section class="prj-item">
                 <section class="prj-img">
-                    <img id="gif"
-                        src="https://media.giphy.com/media/dx5LodWhFMWNlKSTl8/giphy.gif"
-                        alt="" loading="lazy" />
+                    <img id="gif" src="https://media.giphy.com/media/dx5LodWhFMWNlKSTl8/giphy.gif" alt=""
+                        loading="lazy" />
                 </section>
 
                 <section class="prj-info">
@@ -227,10 +226,10 @@
         </section>
 
         <div id="load-more"> load more </div>
+        <div style="height: 150px;"></div>
 
     </section>
 
-    <div style="height: 160px;"></div>
 
     <script>
 
