--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
     <section id="base-grid">
 
         <section class="titlebanner">
-            <h1 class="title" style="font-size: 30px; line-height: 33px;">
-                <a href="index.html" target="_self" class="bold link">fr-wrld</a>: visual projects by <a
-                    href="about.html" target="_self" class="link">fredo</a> <img
-                    src="assets/images/noun-star-6241223.svg" alt="eight bit style stars"
-                    style="margin: 0; margin-left: -2px; margin-top: 2px; padding: 0; width: 19px; position: absolute;">
+            <h1 class="title">
+                <a href="index.html" target="_self" class="link">fr-wrld</a>: visual projects by <a href="about.html"
+                    target="_self" class="link">fredo</a> <img src="assets/images/noun-star-white.svg"
+                    alt="eight bit style stars"
+                    style="margin: 0; margin-left: -2px; margin-top: 2px; padding: 0; width: 19px; position: absolute; fill: white;">
             </h1>
         </section>
         <!-- <section class="item" style="margin: 0 auto; top: 170px;">
@@ -38,13 +38,13 @@
             </h1>
         </section> -->
 
-        <section class="item contact">
-            <h2 class="subtitle" style="font-size: 15.960796px; line-height: 18.198438px;">
-                contact: <a href="mailto:fredo25w@gmail.com" target="_blank" class="link">email</a>, <a
-                    href="https://www.instagram.com/bebofrik/" target="_blank" class="link">instagram</a>, <a
-                    href="https://www.youtube.com/channel/UC5oNJt-0mgmcMfv42GhqxZA" target="_blank"
-                    class="link">youtube</a>, <a href="https://letterboxd.com/spookyfr/" target="_blank"
-                    class="link">letterboxd</a>
+        <section class="contact-card">
+            <h2> contact:
+                <a href="mailto:fredo25w@gmail.com" target="_blank" class="link">email</a>,
+                <a href="https://www.instagram.com/bebofrik/" target="_blank" class="link">gram</a>,
+                <a href="https://www.youtube.com/channel/UC5oNJt-0mgmcMfv42GhqxZA" target="_blank"
+                    class="link">utube</a>,
+                <a href="https://letterboxd.com/spookyfr/" target="_blank" class="link">lettrbxd</a>
             </h2>
         </section>
 
@@ -52,6 +52,18 @@
 
         <section class="prj-grid">
             <!-- Projects start -->
+            <section class="prj-item">
+                <section class="prj-img">
+                    <img id="gif" src="https://media.giphy.com/media/dx5LodWhFMWNlKSTl8/giphy.gif" alt=""
+                        loading="lazy" />
+                </section>
+
+                <section class="prj-info">
+                    <h4 class="prj-title">fly,man</h4>
+                    <p class="date-length">2O24</p>
+                </section>
+            </section>
+
             <section class="prj-item">
                 <section class="prj-img">
                     <img src="assets/videos/lostatsea_1.mp4" alt="" loading="lazy" />
@@ -128,15 +140,9 @@
                     <h4 class="prj-title">
                         <a href="https://youtu.be/2FxIPGvL-Io" target="_blank" class="link">Frosty Silent Hour</a>
                     </h4>
-                    <p class="date-length">1 hr. / 2O23</p>
+                    <p class="date-length">1 hr. | 2O23</p>
                 </section>
             </section>
-
-            <!-- <section class="item" style="margin: 0 auto; top: 170px;">
-                <h1 class="title" style="font-size: 30px; line-height: 36.396875px;">
-                    experiments
-                </h1>
-            </section> -->
 
             <section class="prj-item">
                 <section class="prj-img">
@@ -146,7 +152,7 @@
 
                 <section class="prj-info">
                     <h4 class="prj-title">Bloom</h4>
-                    <p class="date-length"></p>
+                    <p class="date-length">2O23</p>
                 </section>
             </section>
 
@@ -158,7 +164,7 @@
 
                 <section class="prj-info">
                     <h4 class="prj-title">blck river</h4>
-                    <p class="date-length"></p>
+                    <p class="date-length">2O23</p>
                 </section>
             </section>
 
@@ -170,7 +176,7 @@
 
                 <section class="prj-info">
                     <h4 class="prj-title">clementines</h4>
-                    <p class="date-length"></p>
+                    <p class="date-length">2O23</p>
                 </section>
             </section>
 
@@ -182,7 +188,7 @@
 
                 <section class="prj-info">
                     <h4 class="prj-title">gaming</h4>
-                    <p class="date-length"></p>
+                    <p class="date-length">2O23</p>
                 </section>
             </section>
 
@@ -194,7 +200,7 @@
 
                 <section class="prj-info">
                     <h4 class="prj-title">colorful spiriling</h4>
-                    <p class="date-length"></p>
+                    <p class="date-length">2O23</p>
                 </section>
             </section>
 
@@ -207,19 +213,7 @@
 
                 <section class="prj-info">
                     <h4 class="prj-title">glitchy</h4>
-                    <p class="date-length"></p>
-                </section>
-            </section>
-
-            <section class="prj-item">
-                <section class="prj-img">
-                    <img id="gif" src="https://media.giphy.com/media/dx5LodWhFMWNlKSTl8/giphy.gif" alt=""
-                        loading="lazy" />
-                </section>
-
-                <section class="prj-info">
-                    <h4 class="prj-title">fly,man</h4>
-                    <p class="date-length"></p>
+                    <p class="date-length">2O23</p>
                 </section>
             </section>
 
