--- a/about.html
+++ b/about.html
@@ -18,40 +18,36 @@
 </head>
 
 <body>
-    <section class="background-portrait">
+    <section class="bg-me">
         <img src="/assets/images/me-1.jpg" alt="">
     </section>
 
-    <section id="basegrid">
+    <section id="basegrid" style="height: 900px;">
 
-        <section class="titlebanner" style="margin: 0 auto;">
-            <h1 class="title" style="font-size: 30px; line-height: 33px;">
-                <a href="index.html" target="_self" class="bold link">fr-wrld</a>: about wilfredo herrera
+        <section class="titlebanner">
+            <h1 class="title">
+                <a href="index.html" target="_self" class="link">fr-wrld</a>: about wilfredo herrera
             </h1>
         </section>
 
-        <!-- <section class="item" style="margin: 0 auto; top: 170px;">
-            <h1 class="title" style="font-size: 31.921593px; line-height: 36.396875px;">
-                visualizrs
-            </h1>
-        </section> -->
+        <section class="about-container">
 
-        <section class="about-pgraph">
-
-            <section class="about">
-                <p style="font-family: 'DM Mono', monospace; font-weight: 400; word-wrap: break-word;">
+            <section class="about-info">
+                <p>
                     Wilfredo hails from the vibrant island of Puerto Rico. He traveled to Rhode Island for university
                     and discovered the joys of filmmaking. Fredo has worked as gaffer, producer, editor,
-                    cinematographer, and director on various <a href="https://youtu.be/VAabx5ttHa4" target=”_blank”
-                        rel="noopener noreferrer">projects</a> including a <a href="https://youtu.be/wNJihWmU-iE"
-                        target=”_blank” rel="noopener noreferrer">music video for the Boston band Pyramid Thieves</a>.
-                    He also dabbles in front-end web building (he coded this website! as well as others).
+                    cinematographer, and director on various <a class="link" href="https://youtu.be/VAabx5ttHa4"
+                        target=”_blank” rel="noopener noreferrer">projects</a> including a <a class="link"
+                        href="https://youtu.be/wNJihWmU-iE" target=”_blank” rel="noopener noreferrer">music video for
+                        the Boston band Pyramid Thieves</a>. He also dabbles in front-end web building (he coded this
+                    website! as well as others).
 
                     <br>
                     <br>
 
-                    Fredo enjoys music discovery and makes mixes under the moniker <a
+                    Fredo enjoys music discovery and makes mixes under the moniker <a class="link"
                         href="https://www.mixcloud.com/fr_radio/" target="_blank"><em>fredonaut</em></a>
+
                     <br>
                     <br>
 
@@ -74,19 +70,14 @@
                     You can find his resume <a href="assets/resume/fredo-resume-v021224.pdf" target="_blank"
                         class="link">here</a>.
 
+                    <span style="font-size: 10px;">© MCMXCI PRTRC <img src="assets/images/noun-puerto-rico-white.svg" alt=""></span>
+
                 </p>
 
             </section>
 
 
         </section>
-
-        <footer>
-            <p
-                style="font-family: 'DM Mono', monospace; font-size: 10px; color: black; background-color: white; padding: 10px; width: 200px; display: flex; justify-content: center; align-items: center;">
-                © MCMXCI PRTORC
-            </p>
-        </footer>
     </section>
 
     <div style="height: 200px;"></div>
