--- a/index.html
+++ b/index.html
@@ -71,11 +71,11 @@
 
                 <section class="prj-info">
                     <h4 class="prj-title">Lost at sea</h4>
-                    <p class="date-length">2O23</p>
+                    <p class="date-length">08.17.2O23</p>
 
                     <p class="prj-desc">
-                        Sink into the depths of the sea. Part of the HYPERLIFE gallery exhibit at the Brick Aux,
-                        Brooklyn NY. 8.17.23
+                        Sink into the depths of the ocean. Part of the HYPERLIFE gallery exhibit at the Brick Aux,
+                        Brooklyn NY.
                     </p>
                 </section>
             </section>
