--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </section> -->
 
         <section class="contact-card">
-            <h2> contact:
+            <h2> say hi:
                 <a href="mailto:fredo25w@gmail.com" target="_blank" class="link">email</a>,
                 <a href="https://www.instagram.com/bebofrik/" target="_blank" class="link">gram</a>,
                 <a href="https://www.youtube.com/channel/UC5oNJt-0mgmcMfv42GhqxZA" target="_blank"
