--- a/index.html
+++ b/index.html
@@ -71,11 +71,11 @@
 
                 <section class="prj-info">
                     <h4 class="prj-title">Lost at sea</h4>
-                    <p class="date-length">08.17.2O23</p>
+                    <p class="date-length">2O23</p>
 
                     <p class="prj-desc">
                         Sink into the depths of the ocean. Part of the HYPERLIFE gallery exhibit at the Brick Aux,
-                        Brooklyn NY.
+                        Brooklyn NY on August 17th.
                     </p>
                 </section>
             </section>
@@ -89,7 +89,7 @@
                     <h4 class="prj-title">
                         <a href="https://youtu.be/Xj0EtyL7fVw" target="_blank" class="link">Space-Men</a>
                     </h4>
-                    <p class="date-length">5 min. | 2O23</p>
+                    <p class="date-length">(5 min) 2O23</p>
 
                     <p class="prj-desc">
                         An astronaut tries to save his crewmembers from a failing ship in
@@ -108,7 +108,7 @@
                     <h4 class="prj-title">
                         <a href="https://youtu.be/ErilhrNfDMo" target="_blank" class="link">El Santo</a>
                     </h4>
-                    <p class="date-length">5 min. | 2O23</p>
+                    <p class="date-length">(5 min) 2O23</p>
 
                     <p class="prj-desc">
                         Luchador superstar El Santo battles his foes thru a technicolor lo-fi
@@ -127,7 +127,7 @@
                     <h4 class="prj-title">
                         <a href="https://youtu.be/2FxIPGvL-Io" target="_blank" class="link">Wavy Silent Hour</a>
                     </h4>
-                    <p class="date-length">1 hr. | 2O23</p>
+                    <p class="date-length">(1 hr) 2O23</p>
                 </section>
             </section>
 
@@ -140,7 +140,7 @@
                     <h4 class="prj-title">
                         <a href="https://youtu.be/2FxIPGvL-Io" target="_blank" class="link">Frosty Silent Hour</a>
                     </h4>
-                    <p class="date-length">1 hr. | 2O23</p>
+                    <p class="date-length">(1 hr) 2O23</p>
                 </section>
             </section>
 
